[Added] simple workload director-worker set [Initial commit]

--- a/vperf-core/pom.xml
+++ b/vperf-core/pom.xml
@@ -10,7 +10,7 @@
 
     <parent>
         <artifactId>vperfmanager</artifactId>
-        <groupId>com.ajantis.plab</groupId>
+        <groupId>com.ajantis.vperflab</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
