--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ajantis.plab</groupId>
+    <groupId>com.ajantis.vperflab</groupId>
     <artifactId>vperfmanager</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -15,13 +15,14 @@
     <modules>
         <module>vperf-core</module>        
         <module>vperf-web</module>
+        <module>vperf-client</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <org.springframework.version>3.1.0.RELEASE</org.springframework.version>
-        <scala.version>2.8.1</scala.version>
-        <akka.version>2.0-RC1</akka.version>
+        <scala.version>2.9.1</scala.version>
+        <akka.version>2.0</akka.version>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
     </properties>
 
@@ -159,7 +160,7 @@
             </dependency>
 
             <dependency>
-                <groupId>com.ajantis.plab</groupId>
+                <groupId>com.ajantis.vperflab</groupId>
                 <artifactId>vperf-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -181,6 +182,13 @@
                 <artifactId>vijava</artifactId>
                 <version>2120100824</version>
             </dependency>
+
+            <!--
+            <dependency>
+                <groupId>org.hyperic</groupId>
+                <artifactId>sigar</artifactId>
+                <version>1.6.3.82</version>
+            </dependency> -->
 
         </dependencies>
     </dependencyManagement>
@@ -204,9 +212,9 @@
         </repository>
 
         <repository>
-            <id>Akka</id>
-            <name>Akka Maven2 Repository</name>
-            <url>http://akka.io/repository/</url>
+            <id>typesafe</id>
+            <name>Typesafe Repository</name>
+            <url>http://repo.typesafe.com/typesafe/releases/</url>
         </repository>
 
         <repository>
