--- a/vperf-web/pom.xml
+++ b/vperf-web/pom.xml
@@ -10,7 +10,7 @@
 
     <parent>
         <artifactId>vperfmanager</artifactId>
-        <groupId>com.ajantis.plab</groupId>
+        <groupId>com.ajantis.vperflab</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
@@ -23,15 +23,15 @@
 
         <!-- vPerfManager components -->
         <dependency>
-            <groupId>com.ajantis.plab</groupId>
+            <groupId>com.ajantis.vperflab</groupId>
             <artifactId>vperf-core</artifactId>
         </dependency>
         
         <!-- Web components -->
         <dependency>
             <groupId>net.liftweb</groupId>
-            <artifactId>lift-mapper_2.8.1</artifactId>
-            <version>2.3</version>
+            <artifactId>lift-mapper_${scala.version}</artifactId>
+            <version>2.4</version>
         </dependency>
 
         <dependency>
@@ -68,8 +68,8 @@
         <!-- Test scope -->
         <dependency>
             <groupId>org.scala-tools.testing</groupId>
-            <artifactId>specs_2.8.1</artifactId>
-            <version>1.6.6</version>
+            <artifactId>specs_${scala.version}</artifactId>
+            <version>1.6.9</version>
             <scope>test</scope>
         </dependency>
 
@@ -98,8 +98,8 @@
         <!-- for additional lift widgets(loglevel changer, etc) -->
         <dependency>
             <groupId>net.liftweb</groupId>
-            <artifactId>lift-widgets_2.8.1</artifactId>
-            <version>2.3</version>
+            <artifactId>lift-widgets_${scala.version}</artifactId>
+            <version>2.4</version>
         </dependency>
 
         <dependency>
