[Changed] simple http requests as example of workload generation

--- a/vperf-core/pom.xml
+++ b/vperf-core/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>vijava</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
