[Added] web console experiment scheduling

--- a/vperf-web/src/main/webapp/WEB-INF/web.xml
+++ b/vperf-web/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     </context-param>
 
     <listener>
-        <listener-class>com.ajantis.vperflab.vperfmanager.com.ajantis.vperflab.web.JulRedirectListener</listener-class>
+        <listener-class>com.ajantis.vperflab.web.JulRedirectListener</listener-class>
     </listener>
 
     <listener>
@@ -25,7 +25,7 @@
         <filter-class>net.liftweb.http.LiftFilter</filter-class>
         <init-param>
             <param-name>bootloader</param-name>
-            <param-value>com.ajantis.vperflab.vperfmanager.com.ajantis.vperflab.web.Boot</param-value>
+            <param-value>com.ajantis.vperflab.web.Boot</param-value>
         </init-param>
     </filter>
 
