--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,12 @@
             </dependency>
 
             <dependency>
+                <groupId>com.ajantis.vperflab</groupId>
+                <artifactId>vperf-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.typesafe.akka</groupId>
                 <artifactId>akka-actor</artifactId>
                 <version>${akka.version}</version>
