--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,12 @@
                 <version>2120100824</version>
             </dependency>
 
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>1.6.2</version>
+            </dependency>
+
             <!--
             <dependency>
                 <groupId>org.hyperic</groupId>
